--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "kengineering",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://leombrunk.github.io/kengineering",
+  "homepage": "http://leombrunk.github.io",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
