--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "leombrunk.github.io",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://leombrunk.github.io/",
+  "homepage": "https://leombrunk.github.io/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -23,7 +23,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && cp build/index.html build/404.html",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint .",
